Forgot to take away a failed try Assembly folder

--- a/Kitsunes of the Embergarden/KotE/KotE.csproj
+++ b/Kitsunes of the Embergarden/KotE/KotE.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <OutputPath>..\Assemblies\</OutputPath>
+    <OutputPath>..\1.5\Assemblies\</OutputPath>
     <TargetFramework>net472</TargetFramework>
     <LangVersion>10.0</LangVersion>
   </PropertyGroup>
